[package]
name = "rxdp"
version = "0.2.0" # Keep html_root_url in sync
authors = ["Abe Friesen <abefriesen.af@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["xdp", "ebpf", "linux"]
repository = "https://github.com/doyshinda/rxdp"
documentation = "https://docs.rs/rxdp"
description = "Bindings for interoperating with XDP programs and eBPF maps."
categories = ["api-bindings"]
edition = "2018"

[lib]
name = "rxdp"
path = "src/lib.rs"

[dependencies]
bitflags = "1.2.1"
crossbeam-channel = "0.5.0"
errno = "0.2.6"
lazy_static = "1.4.0"
libbpf-sys = "0.1.0-1"
libc = "0.2.80"

[features]
test = []

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "rxdp_benchmark"
harness = false

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []
